[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/level2/sprites/4.png" type="Texture" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/level2/sprites/Design sem nome.png" type="Texture" id=3]
[ext_resource path="res://levels/level2/shaders/florest.tres" type="Material" id=4]
[ext_resource path="res://levels/scripts/Level.gd" type="Script" id=5]
[ext_resource path="res://player/HUD/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://images/cursor/cursor.tscn" type="PackedScene" id=7]
[ext_resource path="res://musics/Florest.mp3" type="AudioStream" id=8]
[ext_resource path="res://menus/pause_menu/MenuPause.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 347.5 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 0.585938, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 5 )
width = 1080

[node name="Forest" type="Node2D"]
script = ExtResource( 5 )
NextZombieTimer = 2

[node name="Cursor" parent="." instance=ExtResource( 7 )]
frame = 2

[node name="CollisionExtremity1" type="StaticBody2D" parent="."]
position = Vector2( 192, 192 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionExtremity1"]
shape = SubResource( 4 )

[node name="CollisionExtremity2" type="StaticBody2D" parent="."]
position = Vector2( 4808, 72 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionExtremity2"]
position = Vector2( 0, 97 )
shape = SubResource( 4 )

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Floor"]
position = Vector2( 31, 501 )
scale = Vector2( 5, 1 )
polygon = PoolVector2Array( 52.621, 31, 157.863, 18, 206.048, 28, 338.306, 47, 422.984, 88, 503.024, 59, 585.887, 39, 664.315, 25, 766.734, 7, 882.46, 4, 956.25, 15, 1109, 11, 1107.4, 651, -108.6, 651, -108.6, 11 )

[node name="Polygon2D" type="Polygon2D" parent="Floor"]
position = Vector2( -51, -7 )
scale = Vector2( 5, 1 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 2.35198, 522, 68.8487, 533, 178.6, 523, 268.8, 539, 355, 551, 440, 595, 548.2, 554, 672.8, 528, 824.4, 507, 905.8, 507, 973.4, 517, 973.6, 1156, 0.641448, 1163 )

[node name="HUD" parent="." instance=ExtResource( 6 )]
layer = 10

[node name="PauseMenu" parent="." instance=ExtResource( 9 )]
layer = 10
visible = false

[node name="BackgroundFront" type="ParallaxBackground" parent="."]
layer = 5

[node name="ParallaxLayer" type="ParallaxLayer" parent="BackgroundFront"]
motion_mirroring = Vector2( 2585.4, 0 )

[node name="Tree1" type="Sprite" parent="BackgroundFront/ParallaxLayer"]
modulate = Color( 0, 0, 0, 1 )
material = ExtResource( 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 108, 48, 662, 432 )

[node name="Tree2" type="Sprite" parent="BackgroundFront/ParallaxLayer"]
modulate = Color( 0, 0, 0, 1 )
material = ExtResource( 4 )
position = Vector2( 1321, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
flip_h = true
region_enabled = true
region_rect = Rect2( 108, 48, 662, 432 )

[node name="BackgroundBack" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="BackgroundBack"]
motion_mirroring = Vector2( 1645, 0 )

[node name="Background" type="Sprite" parent="BackgroundBack/ParallaxLayer2"]
position = Vector2( 0, 900 )
rotation = -1.5708
scale = Vector2( 1, 1980 )
texture = SubResource( 2 )
centered = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="BackgroundBack"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 2915, 0 )

[node name="Tree1" type="Sprite" parent="BackgroundBack/ParallaxLayer"]
modulate = Color( 0.309804, 0.309804, 0.309804, 1 )
position = Vector2( 731, 177 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 108, 540, 731, 432 )

[node name="Tree2" type="Sprite" parent="BackgroundBack/ParallaxLayer"]
modulate = Color( 0.309804, 0.309804, 0.309804, 1 )
position = Vector2( 2190, 177 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
flip_h = true
region_enabled = true
region_rect = Rect2( 108, 540, 731, 432 )

[node name="CameraPlayer" type="Camera2D" parent="."]
position = Vector2( 1383, 332 )
current = true
limit_left = 200
limit_right = 4800
limit_smoothed = true
smoothing_enabled = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 1384, 536 )
collision_layer = 3
collision_mask = 3

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
position = Vector2( -1, -204 )
remote_path = NodePath("../../CameraPlayer")

[node name="ZombieSpawnerLeft" type="Position2D" parent="."]
position = Vector2( -192, 512 )

[node name="ZombieSpawnerRight" type="Position2D" parent="."]
position = Vector2( 5184, 496 )

[node name="ZombieTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
autoplay = true

[connection signal="player_stats_changed" from="Player" to="HUD" method="_on_Player_player_stats_changed"]
[connection signal="timeout" from="ZombieTimer" to="." method="_on_ZombieTimer_timeout"]
